# g2ana

./: ChangeLog.rst  README.md  pyproject.toml  setup.cfg  setup.py
g2ana/: ana.py  cleanup_fits.py  version.py
g2ana/plugins/: ANA.py  Ana_Confirmation.py  Ana_UserInput.py  ObsLog.py  QL_CHARIS.py  QL_FOCAS.py  QL_IRCS.py  QL_MOIRCS.py
g2ana/util/: make_release.py
scripts/: anadisp  anamenu  anaview  cleanup_fits  datasink
