[metadata]
name = g2ana
description = Analysis menu for Subaru on-site data analysis
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.md
url = https://github.com/naojsoft/g2ana
edit_on_github = False
github_project = naojsoft/g2ana
keywords = subaru, telescope, observation, data, analysis
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    inotify>=0.2.10
setup_requires =
    setuptools_scm
include_package_data = True
scripts =
    scripts/anamenu
    scripts/anaview
    scripts/cleanup_fits

[options.package_data]
g2ana = icons/*.png
